--- a/abstract.tex
+++ b/abstract.tex
@@ -38,57 +38,43 @@
 %
 %\NS{Neil crappy abstract: When England wins or loses a football match, we use WMP data to show that there is a 60\% spike in domestic abuse cases.  We only see the patterns for wins and losses not draws, and only see the increase for domestic abuse cases involving alcohol. Indeed the spike is unique to male on female intimate partner domestic abuse, and we don't see it for other types of incident (e.g., antisocial behaviour).}
 
-\section{Introductory para (200 words approx)}
+\section{Introductory paragraph (200 words approx)}
 
-Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory in a national football tournament (the World Cup and European Championship). The effect is specific to alcohol related incidents, with no detectable increase in non-alcohol related incidents. The effect is driven by an increase in male to female alcohol-related cases, and is absent from male to male, female to male, and female to female domestic abuse cases. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours following the victory, and gradually declines to its baseline level in the hours following the match. \NS{The time specificity and limit to only wins make a causal interpretation quite plausible.} \NS{Are we going to get away with this?} The abuse that occurs is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. The alcohol and time specificity go beyond existing reports of the link between football and domestic abuse \autocite{Kirby2014,Brimicombe2012}. 
+Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory in a national football tournament (the World Cup and European Championship). The effect is driven by male to female alcohol-related cases, and is absent from male to male, female to male, and female to female cases. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours following the victory, and gradually declines to its baseline level in the hours following the match. This temporal pattern, along with the random allocation of match days strongly suggests a causal effect of an England victory on the reported number of alcohol-related domestic abuse cases. We find a comparable increase in other, violent, male to female, alcohol-related offences on England win days. The domestic abuse that occurs on these days is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. The alcohol and time specificity go beyond existing reports of the link between football and domestic abuse \autocite{Kirby2014,Brimicombe2012}. 
 
-% Understanding the factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, previous quantitative research has not explored the role of alcohol in this relationship.
-
-\NS{Without us suggesting a single policy change, I dropped that bit. I also reordered to remove the boring first few sentences and get the headline result in the first sentence.}
+%199 words now
 
 \section{Long intro}
 
-``If England gets beaten, so will sh'' - read the poster as part of the ``The Not-So-Beautiful-Game'' awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup \autocite{NCDV}. While the link between sport events and domestic abuse has been the focus of a number of smaller studies\autocite{Williams2014}, large-scale quantitative investigations of this relationship are relatively scarce. The most extensive study in the topic found that an unexpected loss of the local National Football League (NFL) team resulted in a 10\% increase in the rate of reported male to female intimate partner violence (IPV) in the US\autocite{Card2011}. 
+``If England gets beaten, so will she'' - read the poster as part of the ``The Not-So-Beautiful-Game'' awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup \autocite{NCDV}. While the link between sport events and domestic abuse has been the focus of a number of smaller studies\autocite{Williams2014}, large-scale quantitative investigations of this relationship are relatively scarce. The most extensive study in the topic found that an unexpected loss of the local National Football League (NFL) team resulted in a 10\% increase in the rate of reported male to female intimate partner violence (IPV) in the US\autocite{Card2011}. 
 
-In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of \NS{X} viewers \NS{in England}\autocite{BBC}. In 2012, \NS{``a small, exploratory study''---If they are reviewers they will hate this!} investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces \NS{Sounds much bigger than our study} in England\autocite{Brimicombe2012}. Using a control period from 2009, the study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew. A more specific investigation \NS{How more specific?}, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
+In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of 44.5 million viewers\autocite{BBC}. One of the earliest examinations of the link between football and domestic abuse in England focused on the 2010 World Cup, using daily data from 33 out of 39 police forces in England for the period between June-July in 2009 and 2010. Using 2009, a non-tournament year, and non-match days during the tournament in 2010 as controls, they tested whether the number of reported cases increased significantly on England match days (of which there were four), depending on the result of the match (two draws, one win and one loss). The study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew. 
+
+A more comprehensive investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
 Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references and a ``us vs. them'' rhetoric to generate and represent an English national identity\autocite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse, given susceptibility to such behaviours\autocite{Sabo,Swallow}. We speculate that this observation is especially pertinent in the context of England's participation in national tournaments, owing to the popularity of the sport in the country, the associated media attention, and the heightened sense of national consciousness.
 
-Qualitative investigations suggest that alcohol can be a significant factor in the link between football and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved, there is evidence that the violence might result in more serious injuries \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of social, biological and pyschological factors, and that alcohol is not the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. One explanation for the co-occurrence of domestic abuse and alcohol is that, for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. \NS{People may also drink so that can blame the abuse on the booze not themselves?} 
+Qualitative investigations suggest that alcohol can be a significant factor in the link between football and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved, there is evidence that the violence might result in more serious injuries \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of social, biological and pyschological factors, and that alcohol is not the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. One explanation for the co-occurrence of domestic abuse and alcohol is that, for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. It has also been suggested that some perpetrators use alcohol to deflect responsibility for their actions, using alcohol as a ``shield'' that protects them from being seen as a violent abuser\autocite{Javaid2015}.  
 
 In the US, the relationship between unexpected NFL losses and IPV did not depend on alcohol-involvement in the incident\autocite{Card2011}. The England-based quantitative studies did not look at the role of alcohol in particular. Given the strong association between drinking culture and football in England\autocite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol will play an important role in the relationship between national football tournaments and domestic abuse.
 
-To explore this hypothesis, we investigate whether the number of reported domestic abuse cases recorded by the West Midland Police in England between 2010 and 2018 increase on days when the England national team plays in the World Cup or the European Championship, and whether the effect, if any, is affected by alcohol-involvement in the reported case. We also consider whether the result of the match alters the relationship, as previous research suggested that the effect is heightened when England loses\autocite{Kirby2014}. Our rich dataset further allows us to investigate various aspects of the link between football tournaments and domestic abuse, including the exact timing of matches and the specificity to football but not rugby, and the generalisation to non-intimate partner male-to-female violence but not to other crimes. \NS{I do wonder if these non-DA m-to-f violence is really still IPV, but just not flagged as DA because, for example, the couple don't live together, or are not "going out" despite an intimate relationship?}
-
-
-\newpage
-
-\subsection{Data description}
-
-\NS{Needs to go after the discussion. Move any key info needed sooner into the results.}
-
-Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018\footnote{The first half of 2017 has been excluded due to missing data.}. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
+To explore this hypothesis, we investigate whether the number of reported domestic abuse cases recorded by the West Midland Police in England between 2010 and 2018 increase on days when the England national team plays in the World Cup or the European Championship, and whether the effect, if any, depends on alcohol-involvement in the reported case. We also consider whether the result of the match alters the relationship, as previous research suggested that the effect is heightened when England loses\autocite{Kirby2014}. Our rich dataset further allows us to investigate various aspects of the link between football tournaments and domestic abuse, including how the relationship depends on the gender of the perpetrator and victim, whether similar patterns exist between other types of crimes and football, and how the strength of the effect depends on the exact timing of the match. We also examine whether similar links exist between rugby and domestic abuse, and whether the abuse perpetrated on England match days is characteristically different from abuse occurring on non-match days.
 
 In the UK, the term "domestic abuse" refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research has mostly focused on IPV, which the largest subcategory of domestic abuse. 
 
 
-Our dataset contains all cases of domestic abuse that have been reported to the police, but the vast majority of all domestic abuse incidents in fact never get reported (according to the Crime Survey of England and Wales, only 17\% of all domestic abuse victims reported the abuse to the police between April, 2017 and March, 2018\autocite{ONS}). This substantial reporting bias, and its potential correlation with other contextual factors warrants a careful interpretation of the estimates from any quantitative study investigating domestic abuse, and highlights the importance of utilising a mixed methods approach to explore the factors facilitating domestic abuse. 
+Our dataset contains all cases of domestic abuse that have been reported to the West Midlands Police between 2010 and 2018, but the vast majority of all domestic abuse incidents in fact never get reported (according to the Crime Survey of England and Wales, only 17\% of all domestic abuse victims reported the abuse to the police between April, 2017 and March, 2018\autocite{ONS}). This substantial reporting bias, and its potential correlation with other contextual factors warrants a careful interpretation of the estimates from any quantitative study investigating domestic abuse, and highlights the importance of utilising a mixed methods approach to explore the factors facilitating domestic abuse. 
 
+
+\newpage
 
 
 
 \section{Results}
 
-<<<<<<< HEAD
 In the following regressions, each observation is a day in the period between 2010 and 2018, and the outcome variable is the number of domestic abuse cases reported to have been perpetrated on that day. To investigate whether national football tournaments affect the number of reported abuse cases, we classify each day in our dataset as either a day on which England won (England win), lost (England lost) or drew (England draw), a day after an England match day (After England), any other day during the tournament (Tournament on), or any other day during the rest of the year (Nonmatch day). 
 
-Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24\%--110\%] \NS{Add \% units to CIs throughout}  increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. \TM{Should we comment on the lack of effect for draws and losses?}
-=======
-In the following regressions, each observation is a day in the period between 2010 and 2018, and the outcome variable is the number of domestic abuse cases reported to have been perpetrated on that day. To investigate the link between national football tournaments and the number of reported abuse cases, we classify each day in our dataset as either a day on which England won (England win), lost (England lost) or drew (England draw), a day after an England match day (After England), any other day during the tournament (Tournament on), or any other day during the rest of the year (Nonmatch day). 
->>>>>>> af6e7abb155cd6d12fb59ce285b75743efbac431
-
-Using a series of negative binomial regressions, we first compare a set of related models to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24--110] increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. Interestingly, England losses do not result in comparable increases in the number of reported domestic abuse cases. Less surprising is the lack of the effect of draws, probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. \TM{Should we comment on the lack of effect for draws and losses?} \AT{do you think I should move the relevant discussions up here? I was trying to avoid having to make lots of references to the appendix in the first part of the manuscript, e.g. replication of Kirby, robustness of the effect to year exclusions etc.}
-
+Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse.  As shown in Table \ref{specifications}, adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2), and the results show a 20\%, 95\% CI [5\%--38\%] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24\%--110\%] increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. Interestingly, we find no evidence for comparable increases in the number of reported domestic abuse cases when the England national team loses. Less surprising, and more consistent with previous findings is the lack of the effect of draws, probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. 
 
 \begin{table*}[htp]
 \centering
@@ -127,7 +113,7 @@ Alcohol & $-$0.719$^{***}$ & $-$0.719$^{***}$ & $-$0.719$^{***}$ & $-$0.862$^{**
   After England:Alcohol &  &  & 0.051 & 0.037 \\ 
   &  &  & (0.084) & (0.066) \\ 
  \hline \\[-1.8ex] 
-Observations & 6,034 & 6,034 & 6,034 & 6,034 \\ 
+Number of days & 3,017 & 3,017 & 3,017 & 3,017 \\ 
 AIC & 45,539.500 & 45,536.770 & 45,530.360 & 41,959.280 \\ 
 %BIC & 45740.656 & 45771.447 & 45798.563 & 42408.524 \\ 
 \hline 
@@ -141,14 +127,14 @@ AIC & 45,539.500 & 45,536.770 & 45,530.360 & 41,959.280 \\
 \end{threeparttable} }
 \end{table*}
 
-Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32--96]). The results also reveal a smaller, 9\%, 95\% CI [1-17] increase in non-alcohol related cases on days following an England match day, potentially the result of a temporal spillover effect of the match. We also see an 8\%, 95\% CI [2-14] decrease in alcohol-related cases during tournament, but not England match days, perhaps stemming from heavy drinking being mostly concentrated around England match (and particularly England win) days, and relatively lower alcohol consumption on other days during the tournament. 
+Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32\%--96\%]). The results also reveal a smaller, 9\%, 95\% CI [1\%-17\%] increase in non-alcohol related cases on days following an England match day, potentially the result of a temporal spillover effect of the match. We also see an 8\%, 95\% CI [2\%-14\%] decrease in alcohol-related cases during tournament, but not England match days, perhaps stemming from heavy drinking being mostly concentrated around England match (and particularly England win) days, and relatively lower alcohol consumption on other days during the tournament. 
 
 
 
 To explore the characteristics of this increase, we investigate whether the effect is sensitive to the gender of the perpetrator and the victim. Previous qualitative research has suggested that the link between football and domestic abuse is a result of violent expression of masculinity, where heavy drinking is also often present\autocite{Sabo}. If this was the case, we would expect football and alcohol to only affect reported numbers of male-perpetrated domestic abuse. 
 
 
-The first column of Table \ref{gender_regression} shows the result for different offender-victim gender groups. The results show that the effect is only present in the subgroup of Male to Female abuse (which comprises about 80\% of all domestic abuse cases in our data), where the increase is 67\%, 95\% CI [35--107]. These results can be viewed in light of the observation that British football fandom is prevalently male-dominated \autocite{Parry2014}, and they lend support to the hypothesis that masculinity construction and alcohol may be key to the link between football and domestic abuse. \NS{Add: ``But this does not explain why the effect is only seen for female victims.''? Also, is there an inference from the null problem, as the m-to-m confidence interval is quite big? }
+Table \ref{gender_regression} shows the results from four negative binomial regressions, one for each offender-victim gender groups. These reveal a pronounced increase in the subgroup of Male to Female abuse (which comprises about 80\% of all domestic abuse cases in our data), where the number of reported alcohol-related cases increase by 67\%, 95\% CI [35--107] on England win days. While we see similar tendencies in alcohol-related cases in the rest of subgroups on England win days, these coefficients are about half the size of the male to female effect, and are not statistically different from zero. These results can be viewed in light of the observation that British football fandom is prevalently male-dominated \autocite{Parry2014}, and they lend support to the hypothesis that masculinity construction and alcohol may be key to the link between football and domestic abuse. However, it is still unclear why victory-induced, alcohol-related masculinity construction would culminate in violence only against women. \NS{is there an inference from the null problem, as the m-to-m confidence interval is quite big? } \AT{I changed the wording, so I am not saying that it is exclusively male to female. Also included a sentence about similar patterns in other subgroups.}
 
 
 \begin{table}
@@ -191,7 +177,7 @@ The first column of Table \ref{gender_regression} shows the result for different
   Alcohol:After England & 0.209 & 0.052 & $-$0.111 & $-$0.040 \\ 
   & (0.185) & (0.071) & (0.242) & (0.159) \\ 
  \hline \\[-1.8ex] 
-Observations & 6,034 & 6,034 & 6,034 & 6,034 \\ 
+Number of days & 3,017 & 3,017 & 3,017 & 3,017 \\ 
 %Log Likelihood & $-$10,637.300 & $-$19,923.970 & $-$9,234.791 & $-$12,372.460 \\ 
 %$\theta$ & 141.533  (111.012) & 59.918$^{***}$  (2.924) & 64.457$^{**}$  (31.740) & 60.289$^{***}$  (14.059) \\ 
 %Akaike Inf. Crit. & 21,406.600 & 39,979.950 & 18,601.580 & 24,876.910 \\ 
@@ -209,8 +195,6 @@ Observations & 6,034 & 6,034 & 6,034 & 6,034 \\
 
 Our unique dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (including burglary, theft and robbery), public order offences (behaviours that cause offence to the general public), hate crimes (hate incidents and any other racially or religiously aggravated crime), and other violent crimes (excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family and intimate partner relationships.
 
-Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while property-related offences are not affected by football, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after an England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, we find a similar pattern for other violent crimes, namely, a 55\%, 95\% [43--72] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from male to female cases (although male to male and female to male cases also contribute, see Table \ref{othertype_regression} in the Appendix). These results indicate that football and alcohol make men more violent, mostly towards women. 
-
 \begin{table}[!htbp]
  \centering 
  \scalebox{0.8}{
@@ -221,7 +205,7 @@ Table \ref{othertype_regression} shows the results from a series of negative bin
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{4}{c}{\textit{Dependent variable:}} \\ 
-		\\[-1.8ex] & \multicolumn{4}{c}{Number of reported incidents \NS{My edit here correct?} per day} \\ 
+		\\[-1.8ex] & \multicolumn{4}{c}{Number of reported incidents per day} \\ 
 \cline{2-5} 
  & Property- & Public Order & Hate & Other \\ 
   & related &  Offences & incidents & violence \\ 
@@ -250,7 +234,7 @@ Table \ref{othertype_regression} shows the results from a series of negative bin
   Alcohol:After England & 0.094 & 0.127 & 0.446$^{*}$ & 0.053 \\ 
   & (0.144) & (0.158) & (0.211) & (0.088) \\ 
  \hline \\[-1.8ex] 
-Observations & 6,034 & 6,034 & 6,034 & 6,034 \\ 
+Number of days & 3,017 & 3,017 & 3,017 & 3,017 \\ 
 %Log Likelihood & $-$16,843.670 & $-$13,757.560 & $-$11,391.050 & $-$20,108.820 \\ 
 %$\theta$ & 40.698$^{***}$  (1.891) & 33.673$^{***}$  (2.784) & 24.170$^{***}$  (2.563) & 30.562$^{***}$  (1.167) \\ 
 %Akaike Inf. Crit. & 33,819.350 & 27,647.120 & 22,914.090 & 40,349.640 \\ 
@@ -266,14 +250,16 @@ Observations & 6,034 & 6,034 & 6,034 & 6,034 \\
 \end{table}
 
 
-Next, we explore the temporal dynamics of the increase in alcohol-related domestic abuse on England match days in more detail. To this end, we divided each day in our dataset into eight three-hour periods, the first one starting at 12am, and used these to identify specific time windows around the time of the match. The exact time of the matches vary considerably (the earliest starting at 1pm, and the latest at 11pm). We first identified the three-hour period of the day into which each match falls. If the start and end time of the match did not fall in the same three-hour period, we chose the three-hour period that covers the larger part of the match (e.g., a 2.5 hour long match starting at 7pm will be assigned to the 6-9pm period and not to the 9pm-12am period). Based on our previous results, we analyse the effect by the result of the match and alcohol-involvement in the case, by running two separate regressions for alcohol and non-alcohol related domestic abuse cases.
+Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while there is no evidence that England matches affect the number of reported property-related offences, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after an England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, the effect of an England match day on other violent crimes is similar to what we have seen for domestic abuse, namely, a 55\%, 95\% [43\%--72\%] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from male to female cases (although male to male and female to male cases also contribute, see Table \ref{othertype_regression} in the Appendix). While it is possible that misclassified domestic abuse cases contribute to this result (e.g, stemming from the victim's refusal to admit any relationship to the offender), these results only strengthen our conclusion that football and alcohol make men more violent, and overwhelmingly towards women. \AT{Hope it doesn't sound too victim blame-y}
 
-Figure \ref{fig:threehours} shows a plot of the coefficients from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. These results strongly suggest that the emotional effect of a win drive the subsequent increase in alcohol-related domestic abuse and highlight the possibility that the effect of England victories might stem from prolonged post-match celebrations coupled with increased alcohol consumption.  Interestingly, we also see a slight increase in non-alcohol related incidents twelve hours after a loss or a victory, probably reflecting the small increase in non-alcohol related domestic abuse after an England match day seen in Table \ref{specifications}.
+
+
+Next, we explore the temporal dynamics of the increase in alcohol-related domestic abuse on England match days in more detail. Based on our previous results which suggest important differences in the effect of football for alcohol and non-alcohol cases, we analyse the effect by the result of the match and alcohol-involvement in the case, by running two separate regressions for alcohol and non-alcohol related domestic abuse cases. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. These results strongly suggest that the emotional effect of a win drive the subsequent increase in alcohol-related domestic abuse and highlight the possibility that the effect of England victories might stem from prolonged post-match celebrations coupled with increased alcohol consumption.  Interestingly, we also see a slight increase in non-alcohol related incidents twelve hours after a loss or a victory, probably reflecting the small increase in non-alcohol related domestic abuse after an England match day seen in Table \ref{specifications}.
 
 
 \begin{figure}
 \centering
- \caption{The temporal dynamics of the football-induced increase in alcohol involved domestic abuse}
+ \caption{The temporal dynamics of the football-induced increase in domestic abuse, by alcohol involvement}
 \includegraphics[width=0.75\textwidth]{Threehours.pdf}
 \label{fig:threehours}
 		\floatfoot{Note: Estimates are from two separate negative binomial regressions (based on tests of overdispersion) with year, month, day of week, three-hour period of day, Christmas, New Year's eve controls \NS{Y axis need a better label. Perhaps we can transform onto the response scale and plot marginal effects and label it ``Number of cases'' or perhaps we can have it on the exp scale and say ``Increase in domestic abuse (\%)'' and multiply by 100 and relabel 100 as 0\%? Legend ``Alcohol'' to ``Alcohol involved''? YOUR BEAUTIFUL FIGURE DISAPPEARED WHEN I RECOMPILED. wrong figure PDF on github?}}
@@ -326,6 +312,15 @@ We have found that when England wins, there is a 67\% increase in domestic abuse
 
 
 \newpage
+
+\section{Method}
+
+Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018. The first half of 2017 has been excluded due to missing data. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
+
+ To analyse the temporal dynamics of the England win effect (see Figure \ref{fig:threehours}), we divided each day in our dataset into eight three-hour periods, the first one starting at 12am, and used these to identify specific time windows around the time of the match. The exact time of the matches vary considerably (the earliest starting at 1pm, and the latest at 11pm). We first identified the three-hour period of the day into which each match falls. If the start and end time of the match did not fall in the same three-hour period, we chose the three-hour period that covers the larger part of the match (e.g., a 2.5 hour long match starting at 7pm will be assigned to the 6-9pm period and not to the 9pm-12am period).
+
+
+
 
 \section*{Appendix}
 
